{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Player",
            "id": "e923e7f3-86ed-4ef3-8a3b-3384aca4efe1",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "25c14c09-1743-4dc9-be35-7219b2709674",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "b61f3835-b22e-4914-bd80-b67a182c752d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "335274c7-cbf2-4a96-b5b3-fc4fc0f952b7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Crouch",
                    "type": "Button",
                    "id": "362b5043-57a9-42c1-9309-5cb54f6f2f34",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "0445f47f-c218-4073-b0b9-03416d3d217a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BasicShootPress",
                    "type": "Button",
                    "id": "d2756b81-d559-456b-ac28-b5c4715ae820",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "BasicShootHold",
                    "type": "Button",
                    "id": "a4d27619-8fab-4923-b526-490f4857c31f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": false
                },
                {
                    "name": "SecondaryBasicHold",
                    "type": "Button",
                    "id": "3e61866e-9ea7-4467-8a87-737fd03c6465",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.2,pressPoint=0.3)",
                    "initialStateCheck": false
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "d5357e5b-76b0-4c96-b130-dab7913278dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.5,pressPoint=0.6),Press(pressPoint=0.4,behavior=2)",
                    "initialStateCheck": false
                },
                {
                    "name": "WrathPress",
                    "type": "Button",
                    "id": "82684274-6dfb-4325-baf4-2fe412ff46cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Tap(pressPoint=0.3)",
                    "initialStateCheck": false
                },
                {
                    "name": "WrathHold",
                    "type": "Button",
                    "id": "b821b351-49b0-4de2-ad72-982af3e92bcd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.4,pressPoint=0.5)",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "4c6d18dd-c356-45d9-9bc6-67d632f0afdf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Tab",
                    "type": "Button",
                    "id": "a31da381-1cf9-4fd4-adaa-8a518b24f8f9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.2,pressPoint=0.3)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "ec3c2f64-2522-4db6-a1d7-c6089d374888",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "b55f8461-0a34-49a8-959b-896b6c783356",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a8ef7917-ee87-453a-9ed1-f0e4c7e4c139",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4310265c-0f95-4d85-98fb-09f9cfce5d96",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "26962f27-a327-4d76-9bdc-dbc80d0a221a",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "15742317-886c-40e6-b35b-dcf10ece1a61",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d6ec5198-170c-4717-b5e9-b020442670b8",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3147ed59-91ec-438c-8cd8-ff61db8e593c",
                    "path": "<Keyboard>/ctrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a7c411f-978d-42f2-857c-9a3f845f6a15",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e41e8167-a64d-45f6-9297-94fe21436073",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicShootPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49d397a5-2cbf-426b-b359-39517d2593dc",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3771f5b9-d48a-4d5c-8a25-2fce2113ffc9",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WrathPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60ccf8f9-6f7a-463a-b5c3-bd5353c00e20",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicShootHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a97e358d-ff46-479e-ba7c-a2efc77a1678",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4e40a3d-c739-48fa-935f-40e08dc0b63a",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WrathHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "96e14aba-4b42-418e-8828-43e54793aaa7",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Tab",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba71e2e6-e5f6-426d-afb7-56771398efc2",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SecondaryBasicHold",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}